--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mocha": "^8.4.0",
     "should": "^13.2.3"
   },
-  "dependencies": {}
+  "dependencies": {},
   
    "engines" : { 
     "npm" : ">=7.0.0",
