--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "version": "0.0.2",
-  "name": "nfatodfa",
+ 
+   "name": "nfatodfa",
+   "version": "0.0.2",
+   "engines": { "node" : ">=10 <11" },
   "type": "module",
   "description": "An application for visually converting NFAs to DFAs",
   "repository": {
@@ -24,10 +26,5 @@
     "mocha": "^8.4.0",
     "should": "^13.2.3"
   },
-  "dependencies": {},
-  
-    "engines": {
-    "npm": ">=6.0.0",
-    "node": ">=0.0.2"
-  }
+  "dependencies": {}
 }
